# drybox

./: .dockerignore  .gitignore  README.md  compose.yaml  docker-compose.yaml
environment_monitor/: Cargo.toml  Dockerfile
environment_monitor/src/: main.rs
open_telemetry/: config.yaml
